# todo-mock-api-rs

./: Cargo.toml  Dockerfile  compose.yaml
src/: controller.rs  db.rs  lib.rs  router.rs  util.rs
src/controller/: todo.rs  util.rs
src/model/: todo.rs
src/util/: body.rs  http_response.rs
